objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountHierarchyMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organizational level that this contact has access to, if the contact is a portal user.</description>
        <inlineHelpText>The organizational level that this contact has access to, if the contact is a portal user.</inlineHelpText>
        <label>Account Hierarchy Member</label>
        <referenceTo>AccountHierarchyMember__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audience</label>
        <referenceTo>Audience__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactEID__c</fullName>
        <description>The Enterprise ID for this record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this record.</inlineHelpText>
        <label>Contact EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExecutiveAccessBit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact can access all information related to his/her account in the portal.</description>
        <inlineHelpText>Contact can access all information related to his/her account in the portal.</inlineHelpText>
        <label>Executive Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PortalDigestFrequency__c</fullName>
        <description>The frequency of the portal user&apos;s email notification digests.</description>
        <inlineHelpText>The frequency of the portal user&apos;s email notification digests.</inlineHelpText>
        <label>Portal Digest Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PortalDigestPreviouslySentDate__c</fullName>
        <description>The date of the previous portal digest that was sent out.</description>
        <inlineHelpText>The date of the previous portal digest that was sent out.</inlineHelpText>
        <label>Previous Portal Digest Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PortalDigestScheduledDayOrder__c</fullName>
        <description>The day of the week or month on which this portal digest is to be sent, depending on the specified frequency. Weekdays go from Monday as 1 to Sunday as 7.</description>
        <inlineHelpText>The day of the week or month on which this portal digest is to be sent, depending on the specified frequency. Weekdays go from Monday as 1 to Sunday as 7.</inlineHelpText>
        <label>Portal Digest Scheduled Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PortalDigestScheduledHourOrder__c</fullName>
        <description>The hour of the day at which this portal digest is to be sent.</description>
        <inlineHelpText>The hour of the day at which this portal digest is to be sent.</inlineHelpText>
        <label>Portal Digest Scheduled Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PortalDigestSendDate__c</fullName>
        <label>PortalDigestSendDate__c</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>